<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_store_white_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_my_plan"
        android:icon="@drawable/ic_my_plan_24dp"
        android:title="@string/title_my_plan" />

    <item
        android:id="@+id/navigation_production_plan"
        android:icon="@drawable/ic_calendar_24dp"
        android:title="@string/title_production_plan" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/title_profile" />

</menu>